--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-session": "^1.3.3",
     "googleapis": "^59.0.0",
     "lodash": "^4.17.20",
+    "mysql": "^2.18.1",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "passport-restify": "^1.0.1",
