--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-restify": "^1.0.1",
     "restify": "^8.5.0",
     "restify-cookies": "^0.2.6",
+    "ssh2": "^0.8.9",
     "twilio": "^3.38.0",
     "uuid": "^3.3.3"
   }
