--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "cookie-session": "^1.3.3",
+    "googleapis": "^66.0.0",
     "lodash": "^4.17.20",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "passport-restify": "^1.0.1",
+    "puppeteer": "^5.5.0",
     "restify": "^8.5.0",
     "restify-cookies": "^0.2.6",
     "ssh2": "^0.8.9",
+    "superagent": "^6.1.0",
     "twilio": "^3.38.0",
     "uuid": "^3.3.3"
   }
