--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
     "cookie-session": "^1.3.3",
     "googleapis": "^66.0.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.16",
     "passport-facebook": "^3.0.0",
@@ -30,9 +32,14 @@
     "restify": "^8.5.0",
     "restify-cookies": "^0.2.6",
     "socket.io": "^3.0.4",
-    "ssh2": "^0.8.9",
+    "ssh2": "^1.7.0",
     "superagent": "^6.1.0",
-    "twilio": "^3.38.0",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.179",
+    "@types/node": "^17.0.21",
+    "@types/restify": "^8.5.4",
+    "ts-node": "^10.7.0"
   }
 }
