--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.179",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
     "@types/restify": "^8.5.4",
     "ts-node": "^10.7.0"
