--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.36",
     "@types/lodash": "^4.14.179",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
