--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es5",
         "module": "commonjs",
         "rootDir": "./",
         "outDir": "./build",
         "esModuleInterop": true,
+        "sourceMap": true,
         "allowJs": true,
         "resolveJsonModule": true,
         "strict": true
