--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
+    "@types/cookie-session": "^2.0.44",
     "@types/lodash": "^4.14.179",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
