--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.7.2",
     "cookie-session": "^1.3.3",
     "googleapis": "^66.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.36",
     "@types/cookie-session": "^2.0.44",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
