--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
     "@types/restify": "^8.5.4",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.7.0"
   }
 }
