--- a/install/pmapi.conf
+++ b/install/pmapi.conf
@@ -51,7 +51,7 @@ server {
 	}
 	location /pmapi {
             proxy_pass http://localhost:8081;
-        proxy_hide_header 'Access-Control-Allow-Origin';
+        #proxy_hide_header 'Access-Control-Allow-Origin';
 if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
