--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/JPLoyalter/loyalter-api#readme",
   "dependencies": {
     "@gzhangx/googleapi": "^0.0.25",
+    "axios": "^1.1.2",
     "bluebird": "^3.7.2",
     "cookie-session": "^2.0.0",
+    "csv-parse": "^5.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
