--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node build/server.js",
     "prestart": "npm run build",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -46,10 +46,13 @@
     "@types/cookie-session": "^2.0.44",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.179",
+    "@types/mocha": "^10.0.0",
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
     "@types/restify": "^8.5.4",
     "@types/uuid": "^8.3.4",
-    "ts-node": "^10.7.0"
+    "mocha": "^10.1.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.9.1"
   }
 }
