--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/JPLoyalter/loyalter-api#readme",
   "dependencies": {
-    "@gzhangx/googleapi": "^0.0.75",
+    "@gzhangx/googleapi": "^0.0.75",    
     "axios": "^1.1.2",
     "bluebird": "^3.7.2",
     "cookie-session": "^2.0.0",
@@ -33,7 +33,6 @@
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "passport-restify": "^1.0.1",
-    "puppeteer": "^22.12.1",
     "restify": "^8.6.1",
     "restify-cookies": "^0.2.6",
     "socket.io": "^4.4.1",
@@ -48,11 +47,12 @@
     "@types/lodash": "^4.14.179",
     "@types/mocha": "^10.0.0",
     "@types/mysql": "^2.15.21",
-    "@types/node": "^17.0.21",
     "@types/restify": "^8.5.4",
     "@types/uuid": "^8.3.4",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/node": "^22.9.1",
+    "typescript": "^5.6.3"
   }
 }
