--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,14 @@
         "target": "es5",
         "module": "commonjs",
         "rootDir": "./",
-        "outDir": "./build",
+        "outDir": "./build",        
         "esModuleInterop": true,
         "sourceMap": true,
         "allowJs": true,
         "resolveJsonModule": true,
         "strict": true
-    }
+    },
+    "exclude": [
+        "statementpuller", "build", "node_modules"
+    ]
 }
