--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "commonjs",
+        "module": "nodenext",
         "rootDir": "./",
         "outDir": "./build",        
         "esModuleInterop": true,
         "sourceMap": true,
         "pretty": false,
         "allowJs": true,
-        "resolveJsonModule": true,
+        "moduleResolution": "nodenext",
         "strict": true
     },
     "exclude": [
